# solitaire-amethyst

./: Cargo.toml  Dockerfile
.github/workflows/: rust.yml
assets/: display_config.ron
assets/sprites/: backs.ron  empty.ron  faces.ron
scripts/: faces.py
src/: bundles.rs  card.rs  components.rs  main.rs  math.rs  resources.rs  states.rs  systems.rs
src/card/: card.rs  deck.rs
src/components/: boomerang.rs  builder.rs  card.rs  deck.rs  drag.rs  foundation.rs  pile.rs  stack.rs  tableau.rs  waste.rs
src/math/: rectange2.rs  transform.rs
src/states/: play.rs
src/systems/: deck.rs  drag.rs  flip.rs  stack.rs
