[package]
name = "solitaire-rs"
version = "0.1.0"
authors = ["mmurphy316"]
edition = "2018"

[dependencies]
amethyst = "0.12.0"
amethyst_test = "0.3.0"
log = { version = "0.4.6", features = ["serde"] }

[features]
default = ["vulkan", "nightly"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
nightly = ["amethyst/nightly"]